--- a/understand_science/apprunner.yaml
+++ b/understand_science/apprunner.yaml
@@ -3,9 +3,12 @@ runtime: python3
 build:
   commands:
     build:
-      - pip3 install -r requirements.txt
+      - pip install -r requirements.txt
 run:
-  runtime-version: 3.8
+  runtime-version: 3.8.16
   command: sh startup.sh
   network:
-    port: 8080
+    port: 8000
+  secrets:
+    - name: DATABASE_SECRET
+      value-from: "arn:aws:secretsmanager:us-east-1:562861851125:secret:my-django-database-secret-y6SHfR"
