--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/client/node_modules
+/client/package-lock.json
+/client/.pnp
+/client.pnp.js
+/client/.env
+
+# testing
+/client/coverage
+
+# production
+/client/build
+
+# misc
+/client/.DS_Store
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+
+/client/npm-debug.log*
+/client/yarn-debug.log*
+/client/yarn-error.log*
+
+
+
+# SERVER
 venv
+.env
+env.bat
+understand_science/media
+__pycache__
+db.sqlite3
+
+# VS code settings
+.vscode
